disable proposal creatio

--- a/.github/workflows/8prepareProposals.yml
+++ b/.github/workflows/8prepareProposals.yml
@@ -1,8 +1,8 @@
 name: 8 prepare proposals
 
 on:
-  schedule:
-    - cron: '30 * * * *'  #run 
+  #schedule:
+  #  - cron: '30 * * * *'  #run 
   workflow_dispatch:  # Allows manual run
 
 jobs:
