--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-openai==0.28.1
+openai
 langchain==0.0.331
 playwright==1.39.0
 beautifulsoup4==4.12.2
@@ -8,3 +8,4 @@ pyrogram==2.0.106
 Web3==6.11.2
 serpapi==0.1.5
 google-search-results==2.4.2
+python-dotenv
