--- a/.github/workflows/12trackCoingGlassRSI.yml
+++ b/.github/workflows/12trackCoingGlassRSI.yml
@@ -2,7 +2,7 @@ name: 12trackCoingGlassRSI
 
 on:
   schedule:
-    - cron: '15 6-15 * * *'  # Run every 15 minutes from 6 to 15 UTC
+    - cron: '*/30 6-15 * * *'  # Run every 15 minutes from 6 to 15 UTC
   workflow_dispatch:  # Allows manual run
 
 jobs:
